<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_jobs"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_jobs" />
    
    <item
        android:id="@+id/nav_resume"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_resume" />
    
    <item
        android:id="@+id/nav_learn"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_learn" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
